--- a/html/main.html
+++ b/html/main.html
@@ -83,7 +83,7 @@
   </script>
   
 <!-- Swiper -->
-<div class="swiper-container roll" style="border:2px solid blue; height:200px;">
+<div class="swiper-container arrow" style="border:2px solid blue; height:200px;">
 		<div class="swiper-wrapper">
 		  <div class="swiper-slide">Slide 1</div>
 		  <div class="swiper-slide">Slide 2</div>
@@ -103,7 +103,7 @@
   </div>
   <!-- Initialize Swiper -->
   <script>
-    var swiper = new Swiper('.swiper-container.roll', {
+    var swiper = new Swiper('.swiper-container.arrow', {
       navigation: {
         nextEl: '.swiper-button-next',
         prevEl: '.swiper-button-prev',
