--- a/더화이트호텔_20190920/index.html
+++ b/더화이트호텔_20190920/index.html
@@ -62,6 +62,41 @@
                     <td>O</td>
                     <td>2019-09-20</td>
                 </tr>
+                <tr>
+                    <td>4</td>
+                    <td>호텔 > 스탠다드플러스</td>
+                    <td><a href="html/hotel_standard_01_01.html">hotel_standard_01_01.html.html</a></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>호텔 > 스탠다드더블</td>
+                    <td><a href="html/hotel_standard_01_02.html">hotel_standard_01_02.html.html</a></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>호텔 > 스탠다드트윈</td>
+                    <td><a href="html/hotel_standard_01_03.html">hotel_standard_01_03.html.html</a></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>호텔 > 스탠다드온돌</td>
+                    <td><a href="html/hotel_standard_01_04.html">hotel_standard_01_04.html.html</a></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>호텔 > 스탠다드퀴드</td>
+                    <td><a href="html/hotel_standard_01_05.html">hotel_standard_01_05.html.html</a></td>
+                    <td></td>
+                    <td></td>
+                </tr>
                 <tr class="end">
                     <td>5</td>
                     <td>ROOM-TERRACE</td>
