리스트 추가

--- a/더화이트호텔_20190920/index.html
+++ b/더화이트호텔_20190920/index.html
@@ -64,45 +64,80 @@
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>호텔 > 스탠다드플러스</td>
-                    <td><a href="html/hotel_standard_01_01.html">hotel_standard_01_01.html.html</a></td>
+                    <td>호텔 - 스탠다드플러스</td>
+                    <td><a href="html/hotel_standard_01_01.html">hotel_standard_01_01.html</a></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>호텔 > 스탠다드더블</td>
-                    <td><a href="html/hotel_standard_01_02.html">hotel_standard_01_02.html.html</a></td>
+                    <td>호텔 - 스탠다드더블</td>
+                    <td><a href="html/hotel_standard_01_02.html">hotel_standard_01_02.html</a></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>호텔 > 스탠다드트윈</td>
-                    <td><a href="html/hotel_standard_01_03.html">hotel_standard_01_03.html.html</a></td>
+                    <td>호텔 - 스탠다드트윈</td>
+                    <td><a href="html/hotel_standard_01_03.html">hotel_standard_01_03.html</a></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>호텔 > 스탠다드온돌</td>
-                    <td><a href="html/hotel_standard_01_04.html">hotel_standard_01_04.html.html</a></td>
+                    <td>호텔 - 스탠다드온돌</td>
+                    <td><a href="html/hotel_standard_01_04.html">hotel_standard_01_04.html</a></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>호텔 > 스탠다드퀴드</td>
-                    <td><a href="html/hotel_standard_01_05.html">hotel_standard_01_05.html.html</a></td>
+                    <td>호텔 - 스탠다드퀴드</td>
+                    <td><a href="html/hotel_standard_01_05.html">hotel_standard_01_05.html</a></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>호텔 - 주니어스위트 원베드룸</td>
+                    <td><a href="html/hotel_junior_01_01.html">hotel_junior_01_01.html</a></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>호텔 - 주니어스위트 투베드룸</td>
+                    <td><a href="html/hotel_junior_01_02.html">hotel_junior_01_02.html</a></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>호텔 - 화이트스위트 투베드룸</td>
+                    <td><a href="html/hotel_white_01_01.html">hotel_white_01_01.html</a></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>호텔 - 화이트스위트 쓰리베드룸</td>
+                    <td><a href="html/hotel_white_01_02.html">hotel_white_01_02.html</a></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr class="end">
                     <td>5</td>
-                    <td>ROOM-TERRACE</td>
+                    <td>테라스</td>
                     <td><a href="html/room_terrace.html">room_terrace.html</a></td>
                     <td>O</td>
                     <td>2019-09-20</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>테라스 - 스위트</td>
+                    <td><a href="html/terrace_01.html">terrace_01.html</a></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr class="end">
                     <td>6</td>
@@ -110,6 +145,20 @@
                     <td><a href="html/room_vill.html">room_vill.html</a></td>
                     <td>O</td>
                     <td>2019-09-20</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>빌라 - 스위트</td>
+                    <td><a href="html/vill_01.html">vill_01.html</a></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>빌라 - 듀플렉스</td>
+                    <td><a href="html/vill_02.html">vill_02.html</a></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr class="end">
                     <td>7</td>
