--- a/더화이트호텔_20190920/index.html
+++ b/더화이트호텔_20190920/index.html
@@ -223,6 +223,27 @@
                     <td></td>
                     <td></td>
                 </tr>
+                <tr>
+                    <td>12</td>
+                    <td>미팅 > 미팅</td> 
+                    <td><a href="html/meeting.html">meeting.html</a></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>미팅 - 웨딩</td> 
+                    <td><a href="html/wedding.html">wedding.html</a></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>미팅 - 가족연회장</td> 
+                    <td><a href="html/family.html">family.html</a></td>
+                    <td></td>
+                    <td></td>
+                </tr>
                 <tr class="end">
                     <td>13</td>
                     <td>멤버십</td>
